--- a/wiki/Readme.wiki
+++ b/wiki/Readme.wiki
@@ -5,10 +5,10 @@ This is a simple PHP system for securely authenticating users against a MySQL da
 
 = Features =
   * Passwords stored as md5 hashes
-  * Allows the use of OATH compliant HOTP tokens
   * Client sends hashed passwords
     ** When login script is accessed, it generates a challenge that is stored in a session variable and sent to the client.  When the client submits the form, the script uses this challenge value to compute a one way hash of the password's md5 hash, and blanks the password field to prevent it from being sent.  The challenge is not sent back to the server.
     ** The server script computes the the same hash from the md5 hash in the database and the challenge value stored in the session variable.
+  * OATH compliant HOTP tokens
   * Stylesheet
     ** Login form utilizes CSS id and class tags to be fully customizable
   * Ability to be included in other pages
@@ -32,7 +32,7 @@ require "auth_dir/secure.php";
 where auth_dir is the directory that the script was installed.
 
 = Version History = 
-  * 2009/05/12 - Version 1.3
+  * 2009/06/11 - Version 1.3
     * added password change function
     * added the ability to use OATH compliant HOTP tokens
   * 2009/05/01 - Version 1.2
