--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -1,6 +1,8 @@
 #summary Version History
 #labels Phase-Requirements,Phase-Design
 = Version History =
+  * 2009/06/25 - Version 1.3.1
+    * Began the process of moving the sql statements to stored procedures.
   * 2009/06/11 - Version 1.3
     * added password change function
     * added the ability to use OATH compliant HOTP tokens
